--- a/style/style.css
+++ b/style/style.css
@@ -1,240 +1,237 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 * {
-	font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 header {
-	background: #BBBBBB;
-	height: 262px;
-	padding: 0 0 11px 0;
-	/* padding: 50px 0; */
+  background: #bbbbbb;
+  height: 262px;
+  padding: 0 0 11px 0;
+  /* padding: 50px 0; */
 }
 
 .inicial {
-	height: 273px;
+  height: 262px;
 }
 
 .caixa {
-	position: relative;
-	width: 940px;
-	margin: 0 auto;
-	font-family: 'Montserrat', sans-serif;
+  position: relative;
+  width: 940px;
+  margin: 0 auto;
+  font-family: "Montserrat", sans-serif;
 }
 
 nav {
-	position: absolute;
-	top: 119px;
-	right: 0;
-	opacity: 0.8;
+  position: absolute;
+  top: 119px;
+  right: 0;
+  opacity: 0.8;
 }
 
 nav li {
-	display: inline;
-	margin: 0 0 0 15px;
+  display: inline;
+  margin: 0 0 0 15px;
 }
 
 nav a {
-	text-transform: uppercase;
-	color: #000000;
-	font-weight: bold;
-	font-size: 22px;
-	text-decoration: none;
-	transition: 200ms;
-	padding: 0 10px;
+  text-transform: uppercase;
+  color: #000000;
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: none;
+  transition: all 200ms ease-in-out;
+  padding: 0 10px;
 }
 
 nav a:hover {
-	color: #C78C19;
-	background: #3b3b3b62;
-	text-shadow: 3px 3px 8px #00000080;
-	/* text-decoration: underline; */
-	opacity: 0.8;
-	padding: 129px 10px;
+  color: #c78c19;
+  background: #3b3b3b62;
+  text-shadow: 3px 3px 8px #00000080;
+  /* text-decoration: underline; */
+  opacity: 0.8;
+  padding: 129px 10px;
 }
 
 .produtos {
-	width: 940px;
-	margin: 0 auto;
-	padding: 50px 0;
-	cursor: pointer;
+  width: 940px;
+  margin: 0 auto;
+  padding: 50px 0;
+  cursor: pointer;
 }
 
 .produtos li {
-	display: inline-block;
-	text-align: center;
-	width: 30%;
-	vertical-align: top;
-	margin: 0 1.5%;
-	padding: 30px 20px;
-	box-sizing: border-box;
-	border: 2px solid #000000;
-	border-radius: 10px;
-	transition: 0.3s all;
+  display: inline-block;
+  text-align: center;
+  width: 30%;
+  vertical-align: top;
+  margin: 0 1.5%;
+  padding: 30px 20px;
+  box-sizing: border-box;
+  border: 2px solid #000000;
+  border-radius: 10px;
+  transition: 0.3s all;
 }
 
 li img {
-	filter: opacity(80%) grayscale(100%);
-	transition: 0.5s all;
+  filter: opacity(80%) grayscale(100%);
+  transition: 0.5s all;
 }
 
 li:hover img {
-	filter: none;
-	transform: scale(1.04);
+  filter: none;
+  transform: scale(1.04);
 }
 
 .produtos li:hover {
-	border-color: #C78C19;
-	transform: scale(1.2);
+  border-color: #c78c19;
+  transform: scale(1.2);
 }
 
 .produtos li:active {
-	border-color: #c0c0c0;
+  border-color: #c0c0c0;
 }
 
 .produtos li:active img {
-	filter: opacity(45%) grayscale(20%);
-	transition: 0.05s all;
-
+  filter: opacity(45%) grayscale(20%);
+  transition: 0.05s all;
 }
 
 .produtos li:hover h2 {
-	font-size: 30px;
+  font-size: 30px;
 }
 
 .produtos h2 {
-	font-size: 28px;
-	font-weight: bold;
-	transition: 0.5s all;
-	margin-bottom: 10%;
+  font-size: 28px;
+  font-weight: bold;
+  transition: 0.5s all;
+  margin-bottom: 10%;
 }
 
 .produto-descricao {
-	font-size: 16px;
-	font-style: italic;
-	color: #3b3b3b;
-	transition: 0.5s all;
+  font-size: 16px;
+  font-style: italic;
+  color: #3b3b3b;
+  transition: 0.5s all;
 }
 
 .produto-preco {
-	font-size: 22px;
-	font-weight: bold;
-	margin: 10px 0 0;
-	transition: 0.5s all;
+  font-size: 22px;
+  font-weight: bold;
+  margin: 10px 0 0;
+  transition: 0.5s all;
 }
 
 footer {
-	text-align: center;
-	background: url("../img/bg.jpg");
-	padding: 40px 0;
+  text-align: center;
+  background: url("../img/bg.jpg");
+  padding: 40px 0;
 }
 
 .copyright {
-	color: #FFFFFF;
-	font-size: 13px;
-	font-style: italic;
-	margin: 20px 0 0;
-	padding: 0 0 15px 0;
+  color: #ffffff;
+  font-size: 13px;
+  font-style: italic;
+  margin: 20px 0 0;
+  padding: 0 0 15px 0;
 }
 
 .mainform {
-	width: 940px;
-	height: 100%;
-	margin: 0 auto;
+  width: 940px;
+  height: 100%;
+  margin: 0 auto;
 }
 
 form {
-	margin: 40px 0;
+  margin: 40px 0;
 }
 
 form label,
 form legend {
-	display: block;
-	font-size: 20px;
-	margin: 0 0 10px;
+  display: block;
+  font-size: 20px;
+  margin: 0 0 10px;
 }
 
 .box {
-	background: rgba(240, 240, 240, 0.405);
-	color: rgb(126, 126, 126);
-	display: block;
-	margin: 0 0 20px;
-	border: 1px solid #ccc;
-	padding: 10px 25px;
-	border-radius: 5px;
-	width: 50%;
+  background: rgba(240, 240, 240, 0.405);
+  color: rgb(126, 126, 126);
+  display: block;
+  margin: 0 0 20px;
+  border: 1px solid #ccc;
+  padding: 10px 25px;
+  border-radius: 5px;
+  width: 50%;
 }
 
 .checkbox {
-	margin: 20px 0;
+  margin: 20px 0;
 }
 
 /* propriedades do botão */
 .send {
-	border: none;
-	border-radius: 5px;
-	padding: 10px 0;
-	width: 40%;
-	background: orange;
-	color: white;
-	font-weight: bold;
-	font-size: 18px;
-	transition: 0.3s all;
-	cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 0;
+  width: 40%;
+  background: orange;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.3s all;
+  cursor: pointer;
 }
 
 .send:hover {
-	background: darkorange;
-	transform: scale(1.1);
+  background: darkorange;
+  transform: scale(1.1);
 }
 
 select {
-	border: 1px solid #ccc;
-	padding: 5px 15px;
+  border: 1px solid #ccc;
+  padding: 5px 15px;
 }
 
 table {
-	margin: 20px 0 40px;
+  margin: 20px 0 40px;
 }
 
 thead,
 tfoot td {
-	background: #555555b9;
-	color: #fff;
-	font-weight: bold;
-	text-align: center;
-	font-style: italic;
+  background: #555555b9;
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+  font-style: italic;
 }
 
 td,
 th {
-	border: 2px solid #fff;
-	padding: 6px 15px;
-
+  border: 2px solid #fff;
+  padding: 6px 15px;
 }
 
 td {
-	background: #ccc;
-	color: rgba(82, 78, 78, 0.699);
-	font-weight: bold;
+  background: #ccc;
+  color: rgba(82, 78, 78, 0.699);
+  font-weight: bold;
 }
 
 /* css pag inicial */
 .banner {
-	width: 100%;
+  width: 100%;
 }
 
 .titulo-principal {
-	text-align: center;
-	font-size: 2em;
-	margin: 0 0 1em;
-	text-shadow: 3px 3px 8px #00000080;
-	/* SOMBRA X Y BLUR COR/opacidade*/
-	color: rgba(0, 0, 0, 0.45);
-	/* cor do titulo com rgb e alpha (opacidade)*/
-	clear: left;
-	/* limpa o float de .utensilios*/
+  text-align: center;
+  font-size: 2em;
+  margin: 0 0 1em;
+  text-shadow: 3px 3px 8px #00000080;
+  /* SOMBRA X Y BLUR COR/opacidade*/
+  color: rgba(0, 0, 0, 0.45);
+  /* cor do titulo com rgb e alpha (opacidade)*/
+  clear: left;
+  /* limpa o float de .utensilios*/
 }
 
 /* SUPER PODERES CSS: (EXEMPLOS)
@@ -269,72 +266,71 @@ img ~ p {
 }*/
 
 .principal {
-	padding: 3em 0;
-	background: #fefefe;
-	width: 940px;
-	margin: 0 auto;
+  padding: 3em 0;
+  background: #fefefe;
+  width: 940px;
+  margin: 0 auto;
 }
 
 .principal p {
-	margin: 0 0 1em;
+  margin: 0 0 1em;
 }
 
 .principal strong {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 .principal em {
-	font-style: italic;
+  font-style: italic;
 }
 
 .utensilios {
-	width: 120px;
-	float: left;
-	/* faz a img ficar à esq e o texto em volta*/
-	margin: 0 20px 20px 0;
+  width: 120px;
+  float: left;
+  /* faz a img ficar à esq e o texto em volta*/
+  margin: 0 20px 20px 0;
 }
 
 .mapa {
-	padding: 3em 0;
-	background: linear-gradient(#fefefe, #888888);
+  padding: 3em 0;
+  background: linear-gradient(#fefefe, #888888);
 }
 
 .mapa iframe {
-	opacity: 1;
-	transition: 300ms;
-	box-shadow: 10px 10px 15px 0 #000000;
-	/* SOMBRA X Y BLUR DIST COR*/
+  opacity: 1;
+  transition: 300ms;
+  box-shadow: 10px 10px 15px 0 #000000;
+  /* SOMBRA X Y BLUR DIST COR*/
 }
 
 .mapa iframe:hover {
-	opacity: 0.5;
-	transform: scale(1.2);
-	box-shadow: 10px 10px 15px 0 #000000;
+  opacity: 0.5;
+  transform: scale(1.2);
+  box-shadow: 10px 10px 15px 0 #000000;
 }
 
 .mapa-conteudo {
-	width: 940px;
-	margin: 0 auto;
+  width: 940px;
+  margin: 0 auto;
 }
 
 .mapa p {
-	margin: 0 0 2em;
-	text-align: center;
+  margin: 0 0 2em;
+  text-align: center;
 }
 
 .conteudo-beneficios {
-	width: 640px;
-	margin: 0 auto;
+  width: 640px;
+  margin: 0 auto;
 }
 
 .beneficios {
-	padding: 3em 0;
-	background: #888888;
-
+  padding: 3em 0;
+  background: #888888;
 }
 
 .itens {
-	line-height: 1.5;
+  line-height: 1.5;
 }
 
 /* PSEUDO ELEMENTS PODE SER :last-child (ultimo item)
@@ -346,130 +342,128 @@ img ~ p {
 }*/
 
 .itens::before {
-	content: "✂ ";
-	/* objeto em unicode na lista*/
+  content: "✂ ";
+  /* objeto em unicode na lista*/
 }
 
 .lista-beneficios {
-	width: 40%;
-	display: inline-block;
-	vertical-align: top;
+  width: 40%;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .imagem-beneficios {
-	width: 54%;
-	opacity: 0.6;
-	transition: 300ms;
-
+  width: 54%;
+  opacity: 0.6;
+  transition: 300ms;
 }
 
 .imagem-beneficios:hover {
-	opacity: 1;
-	/* SOMBRA X Y BLUR DIST COR*/
-	cursor: pointer;
+  opacity: 1;
+  /* SOMBRA X Y BLUR DIST COR*/
+  cursor: pointer;
 }
 
 .video {
-	width: 560px;
-	margin: 2em auto;
-	transition: 300ms;
-
+  width: 560px;
+  margin: 2em auto;
+  transition: 300ms;
 }
 
 .video:hover {
-	transform: scale(1.2);
-	box-shadow: 10px 10px 15px 0 #000000;
-	/* SOMBRA X Y BLUR DIST COR*/
+  transform: scale(1.2);
+  box-shadow: 10px 10px 15px 0 #000000;
+  /* SOMBRA X Y BLUR DIST COR*/
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 680px) {
+  .caixa, 
+  .conteudo-beneficios {
+    width: auto;
+  }
 
-	.caixa,
-	.conteudo-beneficios {
-		width: auto;
+  .principal {
+    width: auto;
+    margin: 0 2%;
+  }
+	.produtos {
+		margin: 0 auto;
 	}
 
-	.principal {
-		width: auto;
-		margin: 0 2%;
-	}
+  h1 {
+    text-align: center;
+  }
 
-	h1 {
-		text-align: center;
-	}
+  nav {
+    position: static;
+    text-align: center;
+  }
 
-	nav {
-		position: static;
-		text-align: center;
-	}
+  nav a {
+    font-size: 90%;
+  }
 
-	nav a {
-		font-size: 90%;
+  nav a:hover {
+    background: none;
+  }
 
-	}
+  .lista-beneficios {
+    width: 100%;
+    margin: 0 0px 10px 10px;
+  }
 
-	nav a:hover {
-		background: none;
-	}
+  .mapa {
+    padding: 0;
+  }
 
-	.lista-beneficios {
-		width: 100%;
-		margin: 0 0px 10px 10px;
-	}
+  .mapa-conteudo {
+    width: 95%;
+    margin: 0 2.5%;
+    box-shadow: none;
+  }
 
-	.mapa {
-		padding: 0;
-	}
+  .mapa iframe {
+    box-shadow: 3px 3px 5px 0 #000000;
+  }
 
-	.mapa-conteudo {
-		width: 95%;
-		margin: 0 2.5%;
-		box-shadow: none;
-	}
+  .mapa iframe:hover {
+    transform: scale(1.03);
+  }
 
-	.mapa iframe {
-		box-shadow: 3px 3px 5px 0 #000000;
-	}
+  .video iframe {
+    box-shadow: 3px 3px 5px 0 #000000;
+  }
 
-	.mapa iframe:hover {
-		transform: scale(1.03);
-	}
+  .video:hover {
+    transform: scale(1.03);
+  }
 
-	.video iframe {
-		box-shadow: 3px 3px 5px 0 #000000;
+  .video {
+    width: 95%;
+    margin: 2%;
+  }
 
-	}
+  .imagem-beneficios {
+    width: 95%;
+    margin: 2%;
+  }
 
-	.video:hover {
-		transform: scale(1.03);
-	}
+  .mainform {
+    width: auto;
+    margin-left: 10px;
+  }
 
-	.video {
-		width: 95%;
-		margin: 2%;
-	}
+  .produtos li {
+    display: grid;
+    box-sizing: content-box;
+    margin: 0 0 20px 20px;
+  }
 
-	.imagem-beneficios {
-		width: 95%;
-		margin: 2%;
-	}
+  .produtos li:hover {
+    transform: scale(1.05);
+  }
 
-	.mainform {
-		width: auto;
-		margin-left: 10px;
-	}
-
-	.produtos li {
-		display: grid;
-		box-sizing: content-box;
-		margin: 0 0 20px 20px;
-	}
-
-	.produtos li:hover {
-		transform: scale(1.05);
-	}
-
-	.send {
-		width: 50%;
-	}
+  .send {
+    width: 50%;
+  }
 }
